--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,7 +429,7 @@ main .menu-large a {
     border: 0.063rem solid rgb(171, 188, 196);
     border-radius: .8rem .1rem .8rem .1rem;
     transform: scale(100%);
-    transition: transform .1s ease .2s;
+    transition: linear .2s;
 }
 
 main .menu-large a:hover {
